--- a/src/app/template/footer/footer.component.css
+++ b/src/app/template/footer/footer.component.css
@@ -1,12 +1,8 @@
 footer {
     position: fixed;
-    background-color: rgb(52,73,94);
-    color: white;
+    background-color: rgb(51, 59, 63);
+    color: cyan;
     bottom: 0px;
-    padding-top: 70px;
-}
-
-#um {
-  position: fixed;
-  right: 0px;
+    padding: 60px;
+    width: 100%;
 }
