--- a/src/app/components/home/lista-produtos/lista-produtos.component.html
+++ b/src/app/components/home/lista-produtos/lista-produtos.component.html
@@ -1,7 +1,10 @@
 <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action">Pneu </a>
-  <a href="#" class="list-group-item list-group-item-action">Dapibus</a>
-  <a href="#" class="list-group-item list-group-item-action">Risus</a>
-  <a href="#" class="list-group-item list-group-item-action">Porta</a>
-  <a href="#" class="list-group-item list-group-item-action">Vestibulum</a>
+  <a id="produto" routerLink="/info/{{produto.id}}" *ngFor="let produto of lista" class="list-group-item list-group-item-action">
+    <div class="imagem">
+      <img  [src]="produto.img">
+    </div>
+     {{produto.nome}}
+     <div class="info">
+    Preço: {{produto.preco}}<br/> </div>
+  </a>
 </div>
