--- a/src/app/components/home/filtro/filtro.component.html
+++ b/src/app/components/home/filtro/filtro.component.html
@@ -12,5 +12,9 @@
       <img src="assets/pc.png"> <br/>
       <label>Eletrônicos</label>
     </button>
+    <button class="btn btn-light">
+      <img src="assets/casa.png"> <br/>
+      <label>Para Casa</label>
+    </button>
   </div>
 </div>
