--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,7 @@
 #categorias {
-    padding: 20px 0 20px 20px;
+    padding: 20px 120px 20px 20px;
 }
 
 #produtos {
-    padding: 20px 20px 20px 0;
+    padding: 20px;
 }
