--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -12,7 +12,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
@@ -22,11 +22,9 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Disabled</a>
-      </li>
+      </li> -->
     </ul>
-    <button class="btn btn-outline-light" id="signup" href="#">Sign-up</button>
+    <a class="nav-link" href="#">Contato</a>
+    <button class="btn btn-outline-light" id="signup" routerLink="sign-up">Sign-up</button>
   </div>
 </nav>
