--- a/src/app/components/home/filtro/filtro.component.css
+++ b/src/app/components/home/filtro/filtro.component.css
@@ -1,10 +1,10 @@
 #search {
     padding-bottom: 15px;
+    position: relative;
 }
 
 #external {
     padding: 15px;
-    border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: rgb(51, 59, 63);
 }
