--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -21,6 +21,6 @@
         </div>
       </div>
       <button type="submit" class="btn btn-dark" id="conta">Criar conta</button>
-      <a type="submit" routerLink="/">Já tenho uma conta</a>
+      <a  routerLink="/">Já tenho uma conta</a>
   </form>
 </div>
