--- a/src/app/components/home/filtro/filtro.component.css
+++ b/src/app/components/home/filtro/filtro.component.css
@@ -6,5 +6,13 @@
 #external {
     padding: 15px;
     border-radius: 15px;
+    width: 340px;;
     background-color: rgb(51, 59, 63);
+}
+#reset{
+    margin-top: 10px;
+    
+}
+.tey {
+    width: 305px;
 }
