--- a/src/app/components/registro/registro.component.css
+++ b/src/app/components/registro/registro.component.css
@@ -5,9 +5,13 @@
 form {
     padding: 10px 20px 20px 20px;
     border-radius: 10px;
-    background-color: rgb(175, 175, 175);
+    background-color: rgb(51,59,63);
 }
 
 a {
     padding: 20px;
+}
+label{
+    color: white;
+    
 }
