--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-dark">
-  <a class="navbar-brand" routerLink="/">BONITÃO</a>
+  <a class="navbar-brand" routerLink="/">OLX</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
